# AutoDiff

./: Cargo.toml  README.md
src/: lib.rs
src/types/: id.rs  mod.rs  pool.rs  scalar.rs
