[package]
name = "AutoDiff"
version = "0.1.0"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[lib]
name = "autodiff"
path = "src/lib.rs"
[[bin]]
name = "demo"
path = "src/bin/demo.rs"